# Wegsuche

./: .envrc  .gitignore  README.md  flake.nix  main.py  pyproject.toml
lib/: __init__.py  algorithm_manager.py  grid.py
lib/algorithms/: __init__.py  astar.py  bfs.py  bibfs.py
