[tool.poetry]
name = "wegsuche"
version = "0.1.0"
description = "A visualizer for various path finding algorithms"
authors = ["Segmentation Violator <segmentationviolator@proton.me>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = ">=2.2,<3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
