[project]
name = "wegsuche"
version = "0.1.0"
description = "A visualizer for various path finding algorithms"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Segmentation Violator", email = "segmentationviolator@proton.me" }
]

requires-python = ">=3.14,<3.15"

dependencies = [
    "slimgui>=0.6.0",
]
